--- a/styles/home.css
+++ b/styles/home.css
@@ -1,6 +1,6 @@
 .header-background {
-  background: url("../src/assets/pexels-antoni-shkraba-6599067_11zon.jpg") center
-    no-repeat;
+  background: url("../src/assets/pexels-antoni-shkraba-6599067_11zon.jpg")
+    center no-repeat;
   background-size: cover;
 }
 
@@ -8,7 +8,7 @@
   content: "";
   position: absolute;
   height: 80vh;
-  background: rgba(0, 0, 0, 0.25);
+  background: rgba(0, 0, 0, 0.329);
   width: 100%;
   top: 0;
   left: 0;
@@ -16,19 +16,31 @@
 }
 
 .package-background {
-  background:url("../src/assets/6\ of\ The\ Most\ Emotional\ Books\ I\'ve\ Read\ All\ Year\ -\ The\ Espresso\ Edition.png") center no-repeat;
+  background: url("../src/assets/6\ of\ The\ Most\ Emotional\ Books\ I've\ Read\ All\ Year\ -\ The\ Espresso\ Edition.png")
+    center no-repeat;
   background-size: cover;
 }
 
 .package-background::after {
   content: "";
   position: absolute;
-  height: 80%;
-  background: rgba(0, 0, 0, 0.414);
+  height: 80vh;
+  background: rgba(0, 0, 0, 0.154);
   width: 100%;
   top: 0;
   left: 0;
   z-index: 0;
-
 }
 
+@media (max-width: 640px) {
+  .header-background::after {
+    content: "";
+    position: absolute;
+    height: 60vh;
+    background: rgba(0, 0, 0, 0.312);
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+  }
+}
