--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,5 +10,6 @@ body {
   font-family: "YekanBakh", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   direction: rtl;
+  @apply selection:bg-indigo-600/50
 }
 
