--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('./home.css');
-@import url('./unreset.css');
+@import url("./home.css");
+@import url("./unreset.css");
 
 html,
 body {
@@ -11,6 +11,10 @@ body {
   font-family: "YekanBakh", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   direction: rtl;
-  @apply selection:bg-indigo-600/50
+  @apply selection:bg-indigo-600/50;
 }
 
+.auth-background {
+  background: url("../src/assets/loginPhoto.jpg") center;
+  background-size: cover;
+}
